# tr-wordle-py

./: .gitignore  EN-README.md  README.md  check_word.py  clear_task.py  database.py  db_clear_task.py  log_config.py  main.py  models.py  package.json  pyproject.toml  random_word.py  requirements.txt  utils.py  vercel.json  word_crud.py  wordle_routers.py  wordle_utils.py  wordlist.txt
crud/: word_crud.py
data/: wordlist.csv
db/: models.py
ext/bloomfilter-tool/: bloom_filter.go  go.mod  main.go
ext/bloomfilter_tool/: main.go
ext/wasm-trie-tool/: Makefile  build.sh  test.js  trie  trie.cpp  trie.h  trie2.cpp  trie2.h
routers/: wordle_routers.py
scripts/: generate_bloom_filter.js  package.json
tasks/: clear_task.py
utils/: check_word.py  random_word.py  word_definition.py  wordle_utils.py
wordle-ui/: bloom_data.json  index.html
wordle-ui/css/: style.css
wordle-ui/js/: animation.js  api.js  bloom_filter.js  game-state.js  initialize_bloom.js  keyboard.js  main.js  ui-utils.js
