[project]
name = "wordle-py"
version = "0.1.0"
description = "Turkish Wordle Game API With FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.2",
    "requests>=2.32.3",
]
